[package]
name = "coin_chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
log = "0.4"
network = { path = "../network" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
