[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
libp2p = { version = "0.50", features = ["floodsub", "macros", "mdns", "mplex", "noise", "tcp", "tokio"] }
log = "0.4"
serde = "1"
serde_json = "1"
tokio = { version = "1.15", features = ["rt", "rt-multi-thread", "sync"] }
uuid = { version = "1", features = ["serde", "v4"] }
